syntax = "proto3";

package celestiadomain.celestiadomain;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "celestiadomain/celestiadomain/params.proto";

option go_package = "celestia-domain/x/celestiadomain/types";

// Query defines the gRPC querier service.
service Query {
  
  // Parameters queries the parameters of the module.
  rpc Params (QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/celestia-domain/celestiadomain/params";
  
  }
  
  // Queries a list of Domain items.
  rpc Domain (QueryDomainRequest) returns (QueryDomainResponse) {
    option (google.api.http).get = "/celestia-domain/celestiadomain/domain";
  
  }
}
// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryDomainRequest {}

message QueryDomainResponse {
  string domain     = 1;
  uint64 expiration = 2;
}

