syntax = "proto3";

package celestiadomain.celestiadomain;

option go_package = "celestia-domain/x/celestiadomain/types";

// Msg defines the Msg service.
service Msg {
  rpc RegisterDomain   (MsgRegisterDomain  ) returns (MsgRegisterDomainResponse  );
  rpc SetPrimaryDomain (MsgSetPrimaryDomain) returns (MsgSetPrimaryDomainResponse);
}
message MsgRegisterDomain {
  string creator = 1;
  string domain  = 2;
}

message MsgRegisterDomainResponse {
  string owner      = 1;
  string domain     = 2;
  uint64 expiration = 3;
}

message MsgSetPrimaryDomain {
  string creator = 1;
  string domain  = 2;
}

message MsgSetPrimaryDomainResponse {}

